--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "application-name",
+  "name": "uborrow",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "NODE_ENV=production node app.js",
+    "test": "NODE_ENV=test  mocha --recursive"
   },
   "dependencies": {
     "express": "3.4.0",
     "jade": "*",
-    "should": "~2.1.1",
-    "async": "~0.2.9",
-    "mocha": "~1.17.0",
-    "mongoose": "~3.8.4",
-    "supertest": "~0.9.0"
+    "mongoose": "~3.8.4"
+  },
+    "devDependencies": {
+        "should": "~2.1.1",
+        "async": "~0.2.9",
+        "mocha": "~1.17.0",
+        "supertest": "~0.9.0"
+    },
+  "subdomain": "uborrowapi",
+  "engines": {
+    "node": "0.10.x"
   }
 }
